--- a/homeworks/valeriia.briantseva_LeraB/homework_markup_3/index.html
+++ b/homeworks/valeriia.briantseva_LeraB/homework_markup_3/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i&display=swap&subset=cyrillic,latin-ext,vietnamese"
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Hammersmith+One&display=swap&subset=latin-ext" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"
+          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i&display=swap&subset=cyrillic,latin-ext,vietnamese"
+          rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Home Work 3</title>
 </head>
 <body>
@@ -70,94 +73,102 @@
             <label>WATCH OUR STORY</label>
         </div>
     </section>
-    <section class="block-our-expertise container">
+    <section class="block-our-expertise container block-mg-70">
         <h2 class="title-level-two-black">EXPERTISE</h2>
         <p>Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
 
         <ul>
-            <li><img src="images/PUT_YOUR_ICON_HERE.png" alt="web design and development"><label>WEB DESIGN &
+            <li class="col-3"><img src="images/PUT_YOUR_ICON_HERE.png" alt="web design and development"><label>WEB
+                DESIGN
+                &
                 DEVELOPMENT</label>
                 <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </li>
-            <li><img src="images/PUT_YOUR_ICON_HERE%20(1).png" alt="branding identity">BRANDING IDENTITY<label></label>
+            <li class="col-3"><img src="images/PUT_YOUR_ICON_HERE%20(1).png" alt="branding identity"><label>BRANDING
+                IDENTITY</label>
                 <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </li>
-            <li><img src="images/PUT_YOUR_ICON_HERE%20(2).png" alt="mobile app"><label>MOBILE APP</label>
+            <li class="col-3"><img src="images/PUT_YOUR_ICON_HERE%20(2).png" alt="mobile app"><label>MOBILE APP</label>
                 <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </li>
-            <li><img src="images/PUT_YOUR_ICON_HERE%20(3).png" alt="search engine optimization"><label>SEARCH ENGINE
+            <li class="col-3"><img src="images/PUT_YOUR_ICON_HERE%20(3).png" alt="search engine optimization"><label>SEARCH
+                ENGINE
                 OPTIMIZATION</label>
                 <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </li>
-            <li><img src="images/PUT_YOUR_ICON_HERE%20(4).png" alt="game development"><label>GAME DEVELOPMENT</label>
+            <li class="col-3"><img src="images/PUT_YOUR_ICON_HERE%20(4).png" alt="game development"><label>GAME
+                DEVELOPMENT</label>
                 <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </li>
-            <li><img src="images/PUT_YOUR_ICON_HERE%20(5).png" alt="made with love"><label>MADE WITH LOVE</label>
+            <li class="col-3"><img src="images/PUT_YOUR_ICON_HERE%20(5).png" alt="made with love"><label>MADE WITH
+                LOVE</label>
                 <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </li>
         </ul>
     </section>
-    <section class="container">
-        <h2 class="title-level-two-white">MEET OUR AMAZING TEAM</h2>
-        <p>Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
-        <ul>
-            <li><img src="images/user_picture.png" alt="">
-                <label class="user-name">SEMF UCUK</label>
-                <span>CEO & FOUNDER</span></li>
-            <li><img src="images/user_picture.png" alt="">
-                <label class="user-name">DIK ADALIN</label>
-                <span>ENGINEERING</span></li>
-            <li><img src="images/user_picture.png" alt="">
-                <label class="user-name">JENG KOL</label>
-                <span>DESIGNER</span></li>
-            <li>
-                <img src="images/user_picture.png" alt="">
-                <label class="user-name">PET ROMAK</label>
-                <span>MARKETING</span></li>
-        </ul>
+    <section class="block-our-team">
+        <div class="container block-mg-70">
+            <h2 class="title-level-two-white">MEET OUR AMAZING TEAM</h2>
+            <p class="block-description">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+            <ul>
+                <li class="col-4"><img src="images/user_picture.png" alt="">
+                    <div class="content">
+                        <label class="user-name">SEMF UCUK</label>
+                        <span>CEO & FOUNDER</span>
+                    </div>
+                </li>
+                <li class="col-4"><img src="images/user_picture.png" alt="">
+                    <div class="content">
+                        <label class="user-name">DIK ADALIN</label>
+                        <span>ENGINEERING</span>
+                    </div>
+                </li>
+                <li class="col-4"><img src="images/user_picture.png" alt="">
+                    <div class="content">
+                        <label class="user-name">JENG KOL</label>
+                        <span>DESIGNER</span>
+                    </div>
+                </li>
+                <li class="col-4">
+                    <img src="images/user_picture.png" alt="">
+                    <div class="content">
+                        <label class="user-name">PET ROMAK</label>
+                        <span>MARKETING</span>
+                    </div>
+                </li>
+            </ul>
 
-        <p>Become part of our dream team, let’s join us !</p>
-        <a href="#">WE ARE HIRING</a>
+            <p>Become part of our dream team, let’s join us !</p>
+            <a href="#" class="link-transparent">WE ARE HIRING</a>
+        </div>
     </section>
-    <section class="container">
-        <h2 class="title-level-two-black">Testimonials</h2>
-        <ul>
-            <li><p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-                sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis
-                sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a
-                odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.</p>
-                <label class="user-name">JANE GALADRIEL</label><span>CEO TENGKUREP</span><img src="images/user_one.png"
-                                                                                              alt="user one"></li>
-            <li><p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-                sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis
-                sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a
-                odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.</p>
-                <label class="user-name">JANE GALADRIEL</label><span>CEO TENGKUREP</span><img src="images/user_two.png"
-                                                                                              alt="user two"></li>
-            <li><p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-                sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis
-                sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a
-                odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.</p>
-                <label class="user-name">JANE GALADRIEL</label><span>CEO TENGKUREP</span><img
-                        src="images/user_three.png" alt="user three"></li>
-            <li><p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-                sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis
-                sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a
-                odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.</p>
-                <label class="user-name">JANE GALADRIEL</label><span>CEO TENGKUREP</span><img src="images/user_four.png"
-                                                                                              alt="user four"></li>
-            <li><p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-                sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis
-                sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a
-                odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.</p>
-                <label class="user-name">JANE GALADRIEL</label><span>CEO TENGKUREP</span><img src="images/user_five.png"
-                                                                                              alt="user five"></li>
-        </ul>
+    <section class="block-testimonials">
+        <div class="container">
+            <h2 class="title-level-two-black hidden">Testimonials</h2>
+            <div>
+                <blockquote>
+                    <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor
+                        aliquet. Aenean
+                        sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id
+                        elit. Duis
+                        sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec
+                        tellus a
+                        odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.</p>
+                </blockquote>
+                <label class="user-name hidden">JANE GALADRIEL</label><span class="hidden">CEO TENGKUREP</span>
+            </div>
+            <ul>
+                <li><img src="images/user_one.png" alt="user one"></li>
+                <li><img src="images/user_two.png" alt="user two"></li>
+                <li><img src="images/user_three.png" alt="user three"></li>
+                <li><img src="images/user_four.png" alt="user four"></li>
+                <li><img src="images/user_five.png" alt="user five"></li>
+            </ul>
+        </div>
     </section>
-    <section class="container block-mg-70">
+    <section class="container block-mg-70 ov-flow contact-us">
         <div class="block-left">
             <h2 class="title-level-two-black">GIVE US A GOOD NEWS</h2>
-
             <form method="POST" onsubmit="return validateForm()">
                 <div class="user-name-wrapper">
                     <input placeholder="Name" type="text" id="field-user-name" class="user-name" required>
@@ -173,7 +184,7 @@
                 <div class="message-wrapper">
                     <textarea placeholder="Your Massage" id="filed-message" class="message" required></textarea>
                 </div>
-                <button name="submit-data" type="button" id="btn-submit-messages" class="btn-orange">SUBMIT
+                <button name="submit-data" type="button" id="btn-submit-messages" class="link-transparent">SUBMIT
                 </button>
             </form>
         </div>
@@ -185,6 +196,8 @@
                 <li><img src="images/Calvin_klein_logo.png" alt="calvin klein logo"></li>
                 <li><img src="images/Converse_Logo.png" alt="converse logo"></li>
                 <li><img src="images/Levi_Logo.png" alt="levi logo"></li>
+            </ul>
+            <ul>
                 <li><img src="images/Mango_Logo.png" alt="mango logo"></li>
                 <li><img src="images/Gucci_Logo.png" alt="gucci logo"></li>
                 <li><img src="images/NIKE_Logo.png" alt="nike logo"></li>
@@ -194,14 +207,15 @@
         </div>
     </section>
 </main>
-<footer class="container">
-    <div>
-        <img src="images/Logo.png" alt="logo">
+<footer>
+    <div class="container">
+    <div class="col-3">
+        <img src="images/Logo.png" alt="logo" class="logo">
         <p>lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet
             auctror a ornare odio non mauris vitae erat in elit</p>
     </div>
-    <div>
-        <h3>OUR STUDIO</h3>
+    <div class="col-3">
+        <h3 class="title-level-three-white">OUR STUDIO</h3>
         <ul>
             <li>
                 <img src="images/big104.png" alt="location icon">
@@ -214,15 +228,15 @@
             </li>
         </ul>
     </div>
-    <div>
-        <h3>STAY IN TOUCH</h3>
+    <div class="col-3">
+        <h3 class="title-level-three-white">STAY IN TOUCH</h3>
         <form>
             <input type="email" placeholder="Subscribe our newsletter">
-            <button type="submit">submit</button>
+            <button type="submit"><img src="images/paper.png"></button>
         </form>
         <div class="social-buttons">
             <ul>
-                <li><a href="#"><img src="images/facebook25.png" alt="facebook icon">facebook</a></li>
+                <li class="facebook"><a href="#"><img src="images/facebook25.png" alt="facebook icon">facebook</a></li>
                 <li><a href="#"><img src="images/twitter16.png" alt="twitter icon">twitter</a></li>
                 <li><a href="#"><img src="images/dribbble4.png" alt="dribbble icon">dribbble</a></li>
                 <li><a href="#"><img src="images/instagram3.png" alt="instagram icon">instagram</a></li>
@@ -230,6 +244,7 @@
                 <li><a href="#"><img src="images/youtube13.png" alt="youtube icon">youtube</a></li>
             </ul>
         </div>
+    </div>
     </div>
 </footer>
 <script src="index.js"></script>
